@@ -59,8 +59,8 @@ struct sha1_ctx
 {
   uint32_t state[_SHA1_DIGEST_LENGTH];    /* State variables */
   uint64_t count;                         /* 64-bit block count */
-  uint8_t block[SHA1_BLOCK_SIZE];         /* SHA1 data buffer */
   unsigned int index;                     /* index into buffer */
+  uint8_t block[SHA1_BLOCK_SIZE];         /* SHA1 data buffer */
 };
 
 void
